--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "@types/react-redux": "^7.1.21",
+    "autoprefixer": "^10.4.1",
+    "firebase": "^9.6.1",
     "next": "12.0.7",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "tailwindcss": "^3.0.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
